Bug 247661 - Subject has box at end if not qp-encoded
Summary: Subject has box at end if not qp-encoded
Status: CLOSED FIXED
Alias: None
Product: KMail Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: HI normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 249590 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-08-13 16:36 UTC by Rolf Eike Beer
Modified: 2010-09-17 18:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rolf Eike Beer 2010-08-13 16:36:54 UTC
Version:           unspecified (using Devel) 
OS:                Linux

If a subject is not qb-encoded (don't have base64-encoded subjects at hand to look at) then it will show a box at the end in the message list (the one you usually get when a character is not available in your font). If the subject _is_ encoded then everything is fine.

Reproducible: Always




I access the mail via IMAP on a courier server.
Comment 1 Volker Krause 2010-08-16 09:24:37 UTC
Seen this as well, seems to be caused by a trailing \r in the ENVELOPE item part, seems to go away one the full message is loaded.
Comment 2 Volker Krause 2010-08-31 16:13:07 UTC
*** Bug 249590 has been marked as a duplicate of this bug. ***
Comment 3 Bjoern Ricks 2010-09-08 16:24:46 UTC
Increased the priority because this bug should be fixed this month to get a shiny version for our customer
Comment 4 Volker Krause 2010-09-15 15:23:53 UTC
SVN commit 1175648 by vkrause:

work around subject in ENVELOPE having a trailing \r in some cases

BUG: 247661


 M  +1 -1      messagelistproxy.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1175648
Comment 5 Felix Wolfsteller 2010-09-17 17:32:27 UTC
Confirming workaround for version 4:4.5~20100917.1176264-1maemo1.1174921 .