work around subject in ENVELOPE having a trailing \r in some cases

BUG: 247661

svn path=/trunk/KDE/kdepim/mobile/; revision=1175648